force-app/main/default/objects/County_Information__c/County_Information__c.object-meta.xml
<CustomObject>
    <label>County Information</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>County Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CountiesData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>