force-app/main/default/objects/County_Information__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>