force-app/main/default/objects/County_Information__c/fields/County_Full__c.field-meta.xml
<CustomField>
    <fullName>County_Full__c</fullName>
    <label>County Full</label>
    <length>80</length>
    <type>Text</type>
</CustomField>