force-app/main/default/objects/County_Information__c/fields/FIPS_State_Numeric_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_State_Numeric_Code__c</fullName>
    <label>FIPS State Numeric Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>