force-app/main/default/objects/County_Information__c/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <label>Latitude</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>