force-app/main/default/objects/County_Information__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>