force-app/main/default/objects/County_Information__c/fields/State_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>State_Abbreviation__c</fullName>
    <label>State Abbreviation</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>