force-app/main/default/objects/County_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <columns>State_Abbreviation__c</columns>
    <columns>Population__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>